=== release 1.3 ===

2025-09-07 Vincent Torri <vincent.torri@gmail.com>

Package updates:

  * curl 8.15.0
  * ffmpeg 8.0.0
  * fontconfig 2.17.1
  * freetype 2.14.0
  * gettext 0.26.0
  * gst-libav 1.26.4
  * gst-plugins-base 1.26.4
  * gst-plugins-good 1.26.4
  * gstreamer 1.26.4
  * harfbuzz 11.4.5
  * highway 1.3.0
  * libaom 3.12.1
  * libarchive 3.8.1
  * libass 0.17.4
  * libavif 1.3.0
  * libde265 1.0.16
  * libdeflate 1.24
  * libffi 3.5.2
  * libgcrypt 1.11.2
  * libgpg-error 1.55
  * libheif 1.20.2
  * libjpeg 3.1.2
  * libogg 1.3.6
  * libpng 1.6.49
  * libwebp 1.6.0
  * libxml2 2.14.5
  * mpg123 1.33.2
  * nghttp2 1.67.0
  * openssl 3.5.2
  * pixman 0.46.4
  * taglib 2.1.1

=== release 1.2 ===

2025-04-27 Vincent Torri <vincent.torri@gmail.com>

Package additions:

  * bullet 3.25
  * libblake2 0.98.1
  * openssl 3.4.1
  * shared-mime-info 2.4
  * utfcpp 4.0.5

Package removals:
  * libressl 3.8.2 (replaced with openssl)

Package updates:

  * brotli 1.1.0
  * curl 8.12.1
  * dbus 1.16.2
  * expat 2.7.1
  * flac 1.5.0
  * ffmpeg 7.1.0
  * freetype 2.13.3
  * fribidi 1.0.16
  * fontconfig 2.16.0
  * gettext 0.24.0
  * glib2 2.84.0
  * giflib 5.2.2
  * gst-libav 1.26.0
  * gst-plugins-base 1.26.0
  * gst-plugins-good 1.26.0
  * gstreamer 1.26.0
  * harfbuzz 11.1.0
  * highway 1.2.0
  * iconv 0.0.10
  * icu 77.1
  * jbig2dec 0.20
  * lcms2 2.17
  * libaom 3.12.0
  * libarchive 3.7.9
  * libass 0.17.3
  * libavif 1.2.1
  * libdav1d 1.5.1
  * libde265 1.0.15
  * libdeflate 1.23
  * libexif 0.6.25
  * libffi 3.4.8
  * libgcrypt 1.11.0
  * libgpg-error 1.54
  * libgsm 1.0.22
  * libheif 1.19.7
  * libjpeg 3.1.0
  * libjxl 0.11.1
  * libkvazaar 2.3.1
  * libmysofa 1.3.2
  * libopenh264 2.6.0
  * libopenmpt 0.7.3
  * libpng 1.6.47
  * libpsl 0.21.5
  * libraw 0.21.4
  * libsnappy 1.2.2
  * libsndfile 1.2.2
  * libssh2 1.11.1
  * libtiff 4.7.0
  * libvmaf 3.0.0
  * libwavpack 5.8.1
  * libwebp 1.4.0
  * libxml2 2.14.2
  * libyuv 1.89.9
  * luajit 2.1.20250121