@@ -1,20 +1,0 @@
-[binaries]
-c = '@host@-gcc'
-cpp = '@host@-g++'
-ar = '@host@-ar'
-ranlib = '@host@-ranlib'
-strip = '@host@-strip'
-windres = '@host@-windres'
-pkg-config = 'pkg-config'
-
-[host_machine]
-system = 'windows'
-cpu_family = '@cpu_family@'
-cpu = '@cpu@'
-endian = 'little'
-
-[built-in options]
-c_args = ['-I@prefix@/include', '-O2', '-pipe', '-march=@arch@']
-c_link_args = ['-L@prefix@/lib', '-s']
-cpp_args = ['-I@prefix@/include', '-O2', '-pipe', '-march=@arch@']
-cpp_link_args = ['-L@prefix@/lib', '-s']
