@@ -1,4 +1,0 @@
-name: freetype_bootstrap
-version: 2.14.0
-url: http://download.savannah.gnu.org/releases/freetype/freetype-2.14.0.tar.xz
-deps: zlib libpng bzip2 brotli
